Sardorbek Finished Crew part

--- a/scss/block/_Sardorbek.scss
+++ b/scss/block/_Sardorbek.scss
@@ -42,7 +42,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.crew-list__crew-item {
+.crew-list__crew-item  .crew-link{
     color: #FFF;
     font-family: 'Barlow' ,Condensed;
     font-size: 16px;
