--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
+   ========================================================================== */
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -23,6 +24,7 @@ html {
 }
 
 /* Sections
+   ========================================================================== */
 /**
  * Remove the margin in all browsers.
  */
@@ -47,6 +49,7 @@ h1 {
 }
 
 /* Grouping content
+   ========================================================================== */
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -67,6 +70,7 @@ pre {
 }
 
 /* Text-level semantics
+   ========================================================================== */
 /**
  * Remove the gray background on active links in IE 10.
  */
@@ -132,6 +136,7 @@ sup {
 }
 
 /* Embedded content
+   ========================================================================== */
 /**
  * Remove the border on images inside links in IE 10.
  */
@@ -139,6 +144,8 @@ img {
   border-style: none;
 }
 
+/* Forms
+   ========================================================================== */
 /**
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
@@ -283,6 +290,7 @@ textarea {
 }
 
 /* Interactive
+   ========================================================================== */
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
@@ -298,6 +306,7 @@ summary {
 }
 
 /* Misc
+   ========================================================================== */
 /**
  * Add the correct display in IE 10+.
  */
@@ -705,10 +714,6 @@ h1 {
 
 .crew-header {
   margin-top: 71px;
-
-}
-
-.crew-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -752,8 +757,6 @@ h1 {
 }
 
 .crew-list__crew-item .crew-link {
-
-.crew-list__crew-item {
   color: #FFF;
   font-family: "Barlow", Condensed;
   font-size: 16px;
@@ -798,20 +801,71 @@ h1 {
   gap: 24px;
   color: #FFF;
   font-family: "Barlow", Condensed;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 4.725px;
+  text-transform: uppercase;
+  margin-bottom: 154px;
+  margin-top: 76px;
+}
+
+.number {
+  color: #FFF;
+  font-family: "Barlow", Condensed;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 4.725px;
+  opacity: 0.25;
+  margin-right: 24px;
+}
+
+.crew-commander {
+  color: #FFF;
+  font-family: "Bellefair";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  opacity: 0.5042;
+  margin-bottom: 15px;
+}
+
+.crew__crew-title {
+  color: #FFF;
+  font-family: "Bellefair";
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+}
+
+.crew__crew-text {
+  width: 444px;
+  color: #D0D6F9;
+  font-family: Barlow;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 177.778% */
+  margin-bottom: 120px;
+}
+
 .technology-body {
   background-image: url("../../Images/technology-bg-img.jpg");
   background-repeat: no-repeat;
-
   background-size: 100% 100%;
-
-  background-size: cover;
-
 }
 
 .site-technology {
   padding: 43px;
 }
-
 
 .header__content-technology {
   display: flex;
@@ -925,15 +979,6 @@ h1 {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 4.725px;
-  text-transform: uppercase;
-  margin-bottom: 154px;
-  margin-top: 76px;
-}
-
-.number {
-  color: #FFF;
-  font-family: "Barlow", Condensed;
-  font-size: 28px;
 }
 
 .technology__bold {
@@ -945,8 +990,6 @@ h1 {
   line-height: normal;
   letter-spacing: 4.725px;
   opacity: 0.25;
-  margin-right: 24px;
-}
 }
 
 .technology__spans {
@@ -1010,57 +1053,10 @@ h1 {
   color: #D0D6F9;
   font-size: 16px;
   font-family: Barlow, serif;
-
-
-.header__content-technology {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header__logo-link-technology {
-  display: inline-block;
-}
-
-.technology__list-card {
-  width: 830px;
-  height: 96px;
-  background: rgba(255, 255, 255, 0.04);
-  -webkit-backdrop-filter: blur(40.7742271423px);
-          backdrop-filter: blur(40.7742271423px);
-}
-
-.technology__navbar {
-  padding-top: 39px;
-  padding-left: 123px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.technology__navbar + .technology__navbar {
-  margin-left: 50px;
-}
-
-.technology__list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.technology__item + .technology__item {
-  margin-left: 50px;
-}
-
-.technology__link {
-  color: #FFF;
-  font-family: Barlow Condensed;
-  font-size: 16px;
-
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   letter-spacing: 2.7px;
-
   margin-bottom: 11px;
 }
 
@@ -1090,70 +1086,4 @@ h1 {
   justify-content: center;
   gap: 20px;
   text-align: start;
-
-}
-
-.technology-section {
-  padding: 76px 0 0 110px;
-}
-
-.technology__title {
-  color: #FFF;
-  font-family: Barlow Condensed;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 4.725px;
-}
-
-.technology__spans {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-.technology__span {
-  width: 80px;
-  height: 80px;
-  flex-shrink: 0;
-  background-color: #fff;
-  border-radius: 50%;
-}
-
-.technology__span-text {
-  color: black;
-
-.crew-commander {
-  color: #FFF;
-  font-family: "Bellefair";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-transform: uppercase;
-  opacity: 0.5042;
-  margin-bottom: 15px;
-}
-
-.crew__crew-title {
-  color: #FFF;
-  font-family: "Bellefair";
-  font-size: 56px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-transform: uppercase;
-  margin-bottom: 27px;
-}
-
-.crew__crew-text {
-  width: 444px;
-  color: #D0D6F9;
-  font-family: Barlow;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 32px; /* 177.778% */
-  margin-bottom: 120px;
 }/*# sourceMappingURL=main.css.map */
